# Embedded-Iris

./: .gitignore  CMakeLists.txt  LICENSE  OCR.cpp  README.md  Readme.md  main  main.cpp  myprogram  object_detection.cpp  obstacle_detection.h  ocr.cpp  ocr.h  od.cpp  od.h  pigpio file  speak.cpp  speak.h
include/: obstacle_detection.h  ocr.h  od.h  speak.h
src/: main.cpp  obstacle_detection.cpp  ocr.cpp  od.cpp  speak.cpp
test/: CMakeLists.txt  TestOCR.cpp  TestOD.cpp
